# oskernel

./: .gitignore  CMakeLists.txt  Makefile  bochsrc
oskernel/boot/: boot.asm  common.data  head.asm  setup.asm
oskernel/include/: gdt.h  io.h  kernel.h  stdarg.h  string.h  tty.h  types.h
oskernel/init/: enter_x64.asm  main.c
oskernel/kernel/: gdt.c  io.c  printk.c
oskernel/kernel/chr_drv/: console.c
oskernel/lib/: string.c
oskernel64/boot/: head.asm
oskernel64/include/: apic.h  bitmap.h  fppinit.h  idt.h  io.h  kernel.h  math.h  mm.h  stdarg.h  string.h  tss.h  tty.h  types.h
oskernel64/init/: fppinit.c  main64.c
oskernel64/kernel/: apic.c  idt.c  isr.asm  printk.c  tss.c  vsprintf.c
oskernel64/kernel/chr_drv/: console.c  keyboard.c
oskernel64/lib/: math.c
oskernel64/mm/: bitmap.c  mm.c
